// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaBlock isLoading 1`] = `
<button
  aria-label="Test: test"
  className="MediaBlock MediaBlock--loading"
  onMouseUp={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    aria-hidden={true}
    className="MediaBlock__icon-wrapper"
  >
    <Icon
      className="MediaBlock__icon"
      icon="#icon-test"
      title={null}
    />
  </span>
  <img
    alt=""
    className="MediaBlock__img"
    src="example.png"
    width="256"
  />
</button>
`;

exports[`MediaBlock renders 1`] = `
<button
  aria-label="Test: test"
  className="MediaBlock"
  onMouseUp={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    aria-hidden={true}
    className="MediaBlock__icon-wrapper"
  >
    <Icon
      className="MediaBlock__icon"
      icon="#icon-test"
      title={null}
    />
  </span>
  <img
    alt=""
    className="MediaBlock__img"
    src="example.png"
    width="256"
  />
</button>
`;

exports[`MediaBlock tooltip opens 1`] = `
<div>
  <div>
    <div
      class="Tooltip Tooltip--top-start"
      dir="ltr"
      role="tooltip"
      style="top: 0px; inset-inline-start: 0;"
    >
      <div
        style="max-width: 300px;"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;
